# video-encoding-demo

./: .gitignore  Cargo.toml  README.md
encoding_lib/: Cargo.toml  README.md
encoding_lib/src/: data_provider.rs  data_provider_impls.rs  lib.rs  pipeline.rs
examples/: encode_stream.rs  encode_vec.rs
wgpu_based_encoder/: Cargo.toml
wgpu_based_encoder/src/: camera.rs  controller.rs  main.rs  shader.wgsl  state.rs  texture.rs
